CHANGES.txt - 2009-04-03
------------------------

CHANGES IN CUPS V1.4b3

	- Documentation fixes (STR #3044, STR #3057)
	- Added complete localizations for German, Japanese, Polish, and
	  Russian and partial localizations for Chinese, Danish, Finnish,
	  French, Italian, Korean, Norwegian, Portuguese, and Swedish
	  (STR #3096, STR #3098, STR #3109, STR #3111, STR #3141)
	- If a CGI process died before sending its MIME headers, the request
	  would hang on the client.
	- The printer/class/job search feature on the web interface did not
	  work (STR #3132)
	- The scheduler did not write the printers out for classes.
	- CUPS-Get-PPDs did not work properly when filtering by language,
	  product, or psversion (STR #3136)
	- The scheduler now kills job filters when it takes more than 30 seconds
	  (configurable) to cancel or hold the job.
	- The cupstestppd program did not validate the capitalization of
	  filenames in the PPD file.
	- The cupstestppd program did not validate the PageSize and PageRegion
	  values.
	- The cups-deviced helper program could miss reporting some backend
	  devices (STR #3108)
	- The cupsSideChannelSNMP* functions did not work.
	- The scheduler could consume 100% CPU when jobs were canceled.
	- Clicking on "Select Another Make/Manufacturer" in the web interface
	  incorrectly added the printer (STR #3095)
	- The scheduler no longer uses programs with insecure file
	  permissions.
	- httpAssembleURI*() did not escape backslashes in hostnames.
	- The dnssd backend did not unquote "full names" before creating the
	  device URI.
	- The scheduler now supports JobRetryInterval values less than 10
	  seconds.
	- Updated the Spanish localization (STR #3090)
	- The scheduler did not redo Bonjour/DNS-SD registrations when updating
	  them failed.
	- The "authenticated" policy incorrectly required authentication for
	  status operations.
	- ppdOpen*() incorrectly loaded PPDs with multiple JobPatchFile
	  keywords.